# SEPModules

./: .gitattributes  .gitignore  README.md  README_NOTEBOOK.ipynb  SEPDecorators.py  SEPIO.py  SEPMaths.py  SEPPrinting.py  __build__.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.deprecated/: SEPMaths.py  SEPMaths.rst  SEPPrinting.FillCharacters.py  SEPPrinting.py  test_SEPMaths.py
.github/workflows/: python-publish.yml  python-test-publish.yml
SEPModules/: SEPAlgebra.py  SEPDecorators.py  SEPIO.py  SEPLogger.py  SEPMaths.py  SEPPrinting.py  SEPTeX.py  SEPUtils.py  __init__.py
SEPModules/TeX/: SEPTeX.py  SEPTikZ.py  ham.tex
SEPModules/_demo/: demo_SEPLogic.py
SEPModules/_demo/_tmp/: pqbf.tex
SEPModules/_test/: test_SEPAlgebra.py  test_SEPIO.py  test_SEPLogger.py  test_SEPLogic.py  test_SEPMaths.py  test_SEPPrinting.py  test_SEPTeX.py
SEPModules/_test/tmp/: demo1.tex  demo2.tex
SEPModules/maths/: SEPAlgebra.py  SEPLogic.py  SEPMaths.py  SEPQBF.py  __init__.py
SEPModules/test/: test_SEPAlgebra.py  test_SEPDecorators.py  test_SEPIO.py  test_SEPMaths.py  test_SEPPrinting.py  test_SEPTeX.py
SEPModules/test/tmp/: test.tex
SEPModules/tests/: test_SEPDecorators.py  test_SEPMaths.py  test_SEPPrinting.py
c_ext/: SEPCMaths.c  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/modules/: SEPDecorators.doctree  SEPIO.doctree  SEPLogger.doctree  SEPPrinting.doctree  SEPUtils.doctree
docs/_build/doctrees/: environment.pickle
docs/_build/html/: py-modindex.html
docs/_downloads/800b802c5bfcca7cb6a2a3d234caf141/: console_glyph_gen
docs/_sources/: index.rst.txt
docs/_sources/examples/: index.rst.txt
docs/_sources/modules/: SEPAlgebra.rst.txt  SEPLogger.rst.txt  SEPPrinting.rst.txt  index.rst.txt
docs/_static/: custom.css  documentation_options.js
docs/examples/: index.html  test.html
docs/modules/: SEPAlgebra.html  SEPDecorators.html  SEPIO.html  SEPLogger.html  SEPMaths.html  SEPPrinting.FILL_CHARACTERS.html  SEPPrinting.html  SEPUtils.html  index.html
docs/modules/SEPPrinting/: SEPPrinting.FILL_CHARACTERS.html  SEPPrinting.FillCharacters.html  SEPPrinting.html  index.html
font/: console_glyph_gen.py
sphinx/: conf.py  index.rst  make.bat
sphinx/examples/: test.rst
sphinx/modules/: SEPDecorators.rst  SEPIO.rst  SEPLogger.rst  SEPMaths.rst  SEPUtils.rst
(+72 files in other folders)
