[metadata]

name = SEPModules-SEO
version = 0.1.0.dev0
author = Marcel Simader
author_email = marcel0simader@gmail.com
description = SEPModules provides a handful of modules to aid in speeding up the production of small scripts. It also provides a selection of other functions and classes.
classifiers =
	Programming Language :: Python :: 3
	License :: Free for non-commercial use
	Operating System :: Os Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
	= SEPModules
packages = find:
python_requires = >=3.8

[options.packages.find]
where = SEPModules
