[metadata]

name = SEPModules
version = 0.1.0.dev2
author = Marcel Simader
author_email = marcel0simader@gmail.com
description = SEPModules provides a handful of modules to aid in speeding up the production of small or medium-sized scripts.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: Free for non-commercial use
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
	= SEPModules
packages = find:
python_requires = >=3.6

[options.packages.find]
where = SEPModules
